force-app/main/default/objects/CventEvents__SurveyAnswer__c/fields/CventEvents__AnswerStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__AnswerStub__c</fullName>
    <description>Stores either compound key built on answer and category stubs for matrix answers, or answer stub for other answer types.</description>
    <externalId>true</externalId>
    <inlineHelpText>Stores either compound key built on answer and category stubs for matrix answers, or answer stub for other answer types.</inlineHelpText>
    <label>Answer Stub</label>
    <length>73</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>