force-app/main/default/objects/CventEvents__SurveyAnswer__c/fields/CventEvents__CventAnswerStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__CventAnswerStub__c</fullName>
    <description>Stores Cvent database answer stub.</description>
    <externalId>true</externalId>
    <inlineHelpText>Stores Cvent database answer stub.</inlineHelpText>
    <label>Cvent Answer Stub</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>