force-app/main/default/objects/CventEvents__SurveyAnswer__c/fields/CventEvents__EventName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__EventName__c</fullName>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>