force-app/main/default/objects/CventEvents__SurveyAnswer__c/fields/CventEvents__SessionName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SessionName__c</fullName>
    <label>Session Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>