force-app/main/default/objects/CventEvents__SurveyAnswer__c/fields/CventEvents__SessionStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SessionStub__c</fullName>
    <externalId>true</externalId>
    <label>Session Stub</label>
    <length>36</length>
    <type>Text</type>
</CustomField>