force-app/main/default/objects/CventEvents__SurveyAnswer__c/fields/CventEvents__SpeakerName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SpeakerName__c</fullName>
    <label>Speaker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>