force-app/main/default/objects/CventEvents__SurveyAnswer__c/fields/CventEvents__Value__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Value__c</fullName>
    <description>Stores casted to string and truncated to 255 characters answer value.</description>
    <inlineHelpText>Stores casted to string and truncated to 255 characters answer value.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>