force-app/main/default/objects/CventEvents__SurveyAnswer__c/fields/CventEvents__ValueDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ValueDate__c</fullName>
    <description>Stores date question answers.</description>
    <inlineHelpText>Stores date question answers.</inlineHelpText>
    <label>Value</label>
    <type>Date</type>
</CustomField>