force-app/main/default/objects/CventEvents__SurveyAnswer__c/fields/CventEvents__ValueDatetime__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ValueDatetime__c</fullName>
    <description>Stores datetime question answers.</description>
    <inlineHelpText>Stores datetime question answers.</inlineHelpText>
    <label>Value</label>
    <type>DateTime</type>
</CustomField>