force-app/main/default/objects/CventEvents__SurveyAnswer__c/fields/CventEvents__ValueText__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ValueText__c</fullName>
    <description>Stores answers for the rest of the question types.</description>
    <inlineHelpText>Stores answers for the rest of the question types.</inlineHelpText>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>